--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.0.0",
+    "@date-io/moment": "^2.15.0",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.9.2",
+    "@mui/lab": "^5.0.0-alpha.96",
+    "@mui/material": "^5.10.2",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.10.2",
+    "@mui/x-date-pickers": "^5.0.0-beta.7",
     "@reduxjs/toolkit": "^1.5.1",
     "@remotion/player": "^2.5.4",
     "@testing-library/jest-dom": "^4.2.4",
@@ -24,6 +29,7 @@
     "@types/styled-components": "^5.1.25",
     "antd": "^4.16.13",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "eslint-config-react-app": "6.0.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.2.0",
@@ -31,6 +37,8 @@
     "history": "5",
     "jest-watch-typeahead": "0.6.1",
     "lodash": "^4.17.21",
+    "material-table": "1.69.3",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
